--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/yup": "^0.32.0",
     "axios": "^1.12.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.545.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.64.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.18",
@@ -50,7 +52,17 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^24.7.0",
+    "@types/babel__core": "^7.20.5",
+    "@types/babel__generator": "^7.27.0",
+    "@types/babel__template": "^7.4.4",
+    "@types/babel__traverse": "^7.28.0",
+    "@types/bonjour": "^3.5.13",
+    "@types/estree": "^1.0.8",
+    "@types/history": "^5.0.0",
+    "@types/leaflet": "^1.9.21",
+    "@types/node": "^24.7.2",
+    "@types/prettier": "^3.0.0",
+    "@types/trusted-types": "^2.0.7",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6"
   }
